# faceguard

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
backend/: CLAUDE.md
backend/api/: dependencies.py  main.py  ml_client.py  schemas.py
backend/api/middleware/: rate_limit.py  rbac.py  request_logging.py
backend/api/routes/: auth.py  billing.py  enroll.py  matches.py  notifications.py  search.py  takedown.py  users.py
backend/audit/: exporter.py  logger.py
backend/db/: session.py
backend/db/migrations/: README.md  env.py
backend/indexer/: faiss_store.py  ingest.py  milvus.py  qdrant.py  reembed.py  store.py
backend/monitor/: match_diff.py  notifier.py  recrawl_scheduler.py
backend/takedown/: notice.py  tracker.py
backend/tests/: conftest.py
backend/tests/api/: test_liveness_first.py
backend/tests/indexer/: test_faiss_store.py
crawler/: CLAUDE.md  blocklist.txt  items.py  settings.py
crawler/middleware/: dedup.py  proxy_rotation.py  rate_limit.py  robots_check.py
crawler/pipelines/: image_download.py  phash.py  queue_emit.py
crawler/scheduler/: priority.py  recrawl.py
crawler/spiders/: base.py  example.py
crawler/tests/: conftest.py
frontend/: CLAUDE.md
frontend/admin-panel/: main.py
frontend/admin-panel/routers/: analytics.py  audit.py  auth.py  clusters.py  crawler.py  models.py  takedowns.py  users.py
frontend/admin-panel/tests/: conftest.py
frontend/public-site/: main.py
frontend/public-site/routers/: auth.py  billing.py  enroll.py  matches.py  search.py  settings.py  takedowns.py
infra/: prometheus.yml
ml/: CLAUDE.md
ml/alignment/: align.py
ml/benchmarks/: detection.py  embedding.py  liveness.py
ml/clustering/: cluster.py  merge.py
ml/detection/: base.py  retinaface.py  scrfd.py
ml/embedding/: adaface.py  arcface.py  base.py
ml/liveness/: active.py  base.py  deepfake_detect.py  minifasnet.py  passive.py
ml/phash/: hash.py
ml/pipeline/: ingest.py  query.py
ml/serving/: api.py
ml/tests/: conftest.py
scripts/: calibrate_liveness.py  cluster_eval.py  convert_to_onnx.py  embed_test.py  purge_domain.py
tests/: README.md
(+25 files in other folders)
