[project]
name = "faceguard"
version = "0.1.0"
description = "Find where your face appears across the public internet, request takedowns."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "httpx>=0.27",

    # Data / validation
    "pydantic>=2.9",
    "pydantic-settings>=2.5",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "alembic>=1.13",

    # Queue / cache
    "redis>=5.1",
    "celery>=5.4",

    # Auth
    "fastapi-users[sqlalchemy]>=13.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",

    # Forms (frontend apps)
    "wtforms>=3.2",
    "starlette-wtf>=0.4",

    # Rate limiting
    "slowapi>=0.1.9",

    # Storage
    "boto3>=1.35",

    # Observability
    "prometheus-client>=0.21",
    "structlog>=24.4",

    # Compliance markers
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ml = [
    "numpy>=2.1",
    "pillow>=11.0",
    "onnxruntime>=1.20",
    "opencv-python-headless>=4.10",
    "scikit-learn>=1.5",
]
crawler = [
    "scrapy>=2.11",
    "scrapy-redis>=0.9",
]
vector = [
    "qdrant-client>=1.12",
    "pymilvus>=2.4",
    "faiss-cpu>=1.9",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-httpx>=0.33",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "A", "C4", "RET", "SIM"]
ignore = ["S101"]  # allow `assert` in tests

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "crawler/tests", "ml/tests", "frontend", "tests"]
markers = [
    "slow: tests requiring GPU or ONNX runtime",
    "integration: tests that require running services",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]